--- a/src/main/resources/META-INF/rewrite.yml
+++ b/src/main/resources/META-INF/rewrite.yml
@@ -2,11 +2,8 @@
 # https://docs.openrewrite.org/reference/yaml-format-reference
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: com.yourorg.RecipeA
-displayName: Recipe A
-description: Applies NoGuavaListsNewArrayList.
-tags:
-  - tag1
-  - tag2
+name: com.advalange.coderewriter.ReplaceRecordWithClass
+displayName: Record to class
+description: Replaces a record with a class.
 recipeList:
-  - com.yourorg.NoGuavaListsNewArrayList
+  - com.advalange.coderewriter.ReplaceRecordWithClass
